--- a/index.html
+++ b/index.html
@@ -3,12 +3,14 @@
     <head>
         <title>PR Guru - </title>
         <style>
-            body, html { background: #555; margin: 0px; padding: 0px; color: #eee; height: 100%; overflow: hidden;
+            body, html { background: #555; margin: 0px; padding: 0px 0px 20px; color: #eee; height: 100%; overflow: hidden;
                 font-family: Arial, Helvetica, sans-serif; }
             .pr-container { border: 1px solid red; border-radius: 8px; padding: 1em; margin: 1em; float: left;
                 min-height: 4em; min-width: 10em; visibility: hidden; }
             .pr-container.show { visibility: visible; }
             .pr-container h2 { margin: 0px 0px 0.5em; }
+            h1 { background: #666; margin-top: 0px; padding-top: 0.5em; }
+            footer { height: 22px; padding: 3px; position: fixed; bottom: 0px; background: #666; }
         </style>
     </head>
     <body>
