--- a/index.html
+++ b/index.html
@@ -1,20 +1,24 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>PR Guru - </title>
+        <title>PR Guru</title>
         <style>
             body, html { background: #555; margin: 0px; padding: 0px 0px 20px; color: #eee; height: 100%; overflow: hidden;
                 font-family: Arial, Helvetica, sans-serif; }
-            .pr-container { border: 1px solid red; border-radius: 8px; padding: 1em; margin: 1em; float: left;
-                min-height: 4em; min-width: 10em; visibility: hidden; }
+            .pr-container { border: 1px solid rgb(201, 9, 9); border-radius: 8px 8px 24px 8px; padding: 0.5em; margin: 1em; float: left;
+                min-height: 4em; min-width: 10em; visibility: hidden; position: relative; }
             .pr-container.show { visibility: visible; }
             .pr-container h2 { margin: 0px 0px 0.5em; }
+            .pr-container > div { padding-right: 48px; }
             h1 { background: #666; margin-top: 0px; padding-top: 0.5em; }
             footer { height: 22px; padding: 3px; position: fixed; bottom: 0px; background: #666; }
+            .pr-container img { height: 48px; width: 48px; border-radius:24px; border:2px solid rgb(201, 9, 9);
+                position: absolute; bottom: -2px; right: -2px; box-shadow: 8px 8px 12px rgb(30,30,30); }
         </style>
     </head>
     <body>
         <h1></h1>
+        <div id="main-panel"></div>
         <footer></footer>
         <template id="pr-template"><div class="pr-container"><h2>PR TITLE</h2><div>BY / WHEN</div></div></template>
         <script>
@@ -22,24 +26,34 @@
             const REPO = window.location.hash.substr(1);
 
             document.querySelector("h1").innerHTML = REPO;
-            document.title += (" " + REPO);
+            document.title += (" - " + REPO);
 
             function fetchPulls() {
                 req = new XMLHttpRequest();
                 req.open("GET", "https://api.github.com/repos/" + REPO + "/pulls?per_page=10", true);
                 req.onreadystatechange = function() {
                     if(req.readyState === 4 && req.status === 200) {
-                        
+                        var mainPanel = document.querySelector("#main-panel");
+                        while (mainPanel.firstChild) {
+                            mainPanel.firstChild.remove();
+                        }
                         reqj = JSON.parse(req.responseText);
-                        reqj.forEach(pr => {
+                        for (const pr of reqj) {
                             var prClone = document.importNode(document.querySelector("#pr-template").content, true);
 
                             prClone.querySelector("h2").innerHTML = pr.title;
-                            prClone.querySelector("div div").innerHTML = "by: " + pr.user.login + "<br/>on: " + pr.created_at;
-                            document.querySelector("body").appendChild(prClone);
-                        });
-                        // Make all PR boxes visible (TODO: test before showing if this fits on screen,
-                        // if not, enter carousel mode)
+                            prClone.querySelector("div div").innerHTML = "by: "
+                                + "<img src='" + pr.user.avatar_url + "'>"
+                                + pr.user.login + "<br/>on: " + (new Date(Date.parse(pr.created_at))).toUTCString();
+                            mainPanel.appendChild(prClone);
+                            // If this clips the lower border of the viewport, quit the loop.
+                            if (window.innerHeight - mainPanel.lastChild.getBoundingClientRect().bottom < 0) {
+                                mainPanel.lastChild.remove();
+                                console.warn("Quit pr display loop early due to insufficient screen space.");
+                                break;
+                            }
+                        }
+                        // Make all remaining PR boxes visible
                         document.querySelectorAll(".pr-container").forEach(prc => {prc.classList.add("show")});
                         document.querySelector("body footer").innerHTML = "Last checked: " + new Date();
                     }
